name:           K3-Core
version:        0.0.0.1
author:         P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
maintainer:     P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
build-type:     Simple
cabal-version:  >=1.8

library
    hs-source-dirs:
        src

    build-depends:
        base,
        bytestring,
        containers,
        either,
        errors,
        mtl,
        network-transport,
        network-transport-tcp,
        parsec,
        parsec-parsers,
        parsers,
        SafeSemaphore,
        template-haskell,
        transformers,
        unordered-containers

    exposed-modules:
        Language.K3.Core.Annotation,
        Language.K3.Core.Common,
        Language.K3.Core.Declaration,
        Language.K3.Core.Expression,
        Language.K3.Core.Type,
        Language.K3.Core.Constructor.Declaration,
        Language.K3.Core.Constructor.Expression,
        Language.K3.Core.Constructor.Type,
        Language.K3.Parser,
        Language.K3.Parser.ProgramBuilder,
        Language.K3.Pretty,
        Language.K3.Interpreter,
        Language.K3.Runtime.Dispatch,
        Language.K3.Runtime.Engine,
        Language.K3.Transform.Alpha,
        Language.K3.TemplateHaskell.Reduce,
        Language.K3.TemplateHaskell.ReduceM,
        Language.K3.TemplateHaskell.Transform,
        Language.K3.TemplateHaskell.TransformM,
        Language.K3.TemplateHaskell.Utils,
        Language.K3.TypeSystem.Consistency,
        Language.K3.TypeSystem.Data,
        Language.K3.TypeSystem.Data.Utils,
        Language.K3.TypeSystem.Monad.Iface.FreshVar,
        Language.K3.TypeSystem.Morphisms.ExtractVariables,
        Language.K3.TypeSystem.Morphisms.ReplaceVariables,
        Language.K3.TypeSystem.Polymorphism

    ghc-options: -Wall
    other-modules: 
                   Language.K3.TypeSystem.Subtyping,
                   Language.K3.TypeSystem.Subtyping.ConstraintMap,
                   Language.K3.TypeSystem.Annotations,
                   Language.K3.TypeSystem.Utils,
                   Language.K3.TypeSystem.TypeChecking,
                   Language.K3.TypeSystem.TypeChecking.Expressions,
                   Language.K3.TypeSystem.TypeChecking.Declarations,
                   Language.K3.TypeSystem.TypeChecking.Basis,
                   Language.K3.TypeSystem.TypeChecking.TypeExpressions,
                   Language.K3.Utils.Conditional,
                   Language.K3.TypeSystem.Data.TypesAndConstraints,
                   Language.K3.TypeSystem.Data.Convenience,
                   Language.K3.TypeSystem.Data.ConstraintSet,
                   Language.K3.TypeSystem.ConstraintSetLike

test-suite all
    type: exitcode-stdio-1.0

    main-is: Test.hs

    hs-source-dirs:
        test

    build-depends:
        base,

        K3-Core,
        parsec,

        HUnit,
        test-framework,
        test-framework-hunit
