name:           K3-Core
version:        0.0.0.1
author:         P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
maintainer:     P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
build-type:     Simple
cabal-version:  >=1.8

library
    hs-source-dirs:
        src

    build-depends:
        base,
        bytestring,
        containers,
        either,
        mtl,
        network,
        network-transport,
        network-transport-tcp,
        parsec,
        parsec-parsers,
        parsers,
        process,
        SafeSemaphore,
        transformers,
        unordered-containers

    exposed-modules:
        Language.K3.Core.Annotation,
        Language.K3.Core.Declaration,
        Language.K3.Core.Expression,
        Language.K3.Core.Type,

        Language.K3.Core.Constructor.Declaration,
        Language.K3.Core.Constructor.Expression,
        Language.K3.Core.Constructor.Type,

        Language.K3.Parser,
        Language.K3.Parser.ProgramBuilder,

        Language.K3.Pretty,

        Language.K3.Interpreter,

        Language.K3.Runtime.Dispatch,
        Language.K3.Runtime.Engine,

        Language.K3.Transform.Alpha

    ghc-options: -Wall

test-suite all
    type: exitcode-stdio-1.0

    main-is: Test.hs

    hs-source-dirs:
        test

    build-depends:
        base,

        K3-Core,

        HUnit,
        test-framework,
        test-framework-hunit
