name:           K3-Core
version:        0.0.0.1
author:         P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
maintainer:     P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
build-type:     Simple
cabal-version:  >=1.8

flag test
    default: False
    manual: True

library
    if flag(test)
        cpp-options: -DTEST

    hs-source-dirs:
        src

    build-depends:
        base,
        bytestring,
        containers,
        deepseq,
        either,
        errors,
        filemanip,
        filepath,
        graph-wrapper,
        hashable,
        haskell-src-exts == 1.13.5,
        haskell-src-exts-qq,
        hslogger,
        mtl,
        network,
        network-transport,
        network-transport-tcp,
        optparse-applicative >= 0.7,
        parsec,
        parsers >= 0.10,
        process,
        split,
        SafeSemaphore,
        template-haskell,
        transformers,
        unordered-containers,
        ansi-wl-pprint

    exposed-modules:
        Language.K3.Core.Annotation,
        Language.K3.Core.Annotation.Syntax,
        Language.K3.Core.Common,
        Language.K3.Core.Declaration,
        Language.K3.Core.Expression,
        Language.K3.Core.Literal,
        Language.K3.Core.Type,
        Language.K3.Core.Utils,
        Language.K3.Core.Constructor.Declaration,
        Language.K3.Core.Constructor.Expression,
        Language.K3.Core.Constructor.Literal,
        Language.K3.Core.Constructor.Type,
        Language.K3.Utils.Conditional,
        Language.K3.Utils.Either,
        Language.K3.Utils.Logger,
        Language.K3.Utils.Logger.Config,
        Language.K3.Utils.Logger.Generators,
        Language.K3.Utils.Logger.Operations,
        Language.K3.Utils.Pretty,
        Language.K3.Utils.Pretty.Syntax,
        Language.K3.Utils.TemplateHaskell.Reduce,
        Language.K3.Utils.TemplateHaskell.ReduceM,
        Language.K3.Utils.TemplateHaskell.Transform,
        Language.K3.Utils.TemplateHaskell.TransformM,
        Language.K3.Utils.TemplateHaskell.Utils,
        Language.K3.Parser,
        Language.K3.Parser.Preprocessor,
        Language.K3.Parser.ProgramBuilder,
        Language.K3.Parser.K3Ocaml,
        Language.K3.Interpreter,
        Language.K3.Runtime.Common,
        Language.K3.Runtime.Dispatch,
        Language.K3.Runtime.Engine,
        Language.K3.Runtime.Literal,
        Language.K3.Runtime.Options,
        Language.K3.Transform.Alpha,
        Language.K3.Transform.Conflicts,
        Language.K3.Transform.Interpreter.BindAlias,
        Language.K3.TypeSystem.Consistency,
        Language.K3.TypeSystem.Data,
        Language.K3.TypeSystem.Monad.Iface.FreshVar,
        Language.K3.TypeSystem.Morphisms.ExtractVariables,
        Language.K3.TypeSystem.Morphisms.ReplaceVariables,
        Language.K3.TypeSystem.Polymorphism,
        Language.K3.TypeSystem,
        Language.K3.TypeSystem.Environment,
        Language.K3.TypeSystem.Annotations,
        Language.K3.TypeSystem.Utils,
        Language.K3.TypeSystem.TypeChecking,
        Language.K3.TypeSystem.Closure,
        Language.K3.TypeSystem.TypeChecking.Expressions,
        Language.K3.TypeSystem.TypeChecking.Declarations,
        Language.K3.TypeSystem.TypeChecking.TypeExpressions,
        Language.K3.TypeSystem.Data.Coproduct,
        Language.K3.TypeSystem.Data.Convenience,
        Language.K3.TypeSystem.Data.ConstraintSet,
        Language.K3.TypeSystem.TypeDecision,
        Language.K3.TypeSystem.ConstraintSetLike,
        Language.K3.TypeSystem.TypeDecision.SkeletalEnvironment,
        Language.K3.TypeSystem.TypeDecision.Data,
        Language.K3.TypeSystem.TypeDecision.Monad,
        Language.K3.TypeSystem.Utils.TemplateHaskell,
        Language.K3.TypeSystem.TypeChecking.Monad,
        Language.K3.TypeSystem.Monad.Iface.TypeError,
        Language.K3.TypeSystem.Monad.Iface.TypeAttribution,
        Language.K3.TypeSystem.Error,
        Language.K3.TypeSystem.Utils.K3Tree,
        Language.K3.TypeSystem.Monad.Utils,
        Language.K3.TypeSystem.Sanity,
        Language.K3.TypeSystem.TypeDecision.AnnotationInlining,
        Language.K3.TypeSystem.TypeDecision.StubReplacement,
        Language.K3.TypeSystem.Annotations.Error,
        Language.K3.Core.Annotation.Codegen,
        Language.K3.Codegen.Common,
        Language.K3.Codegen.CPP,
        Language.K3.Codegen.Haskell,
        Language.K3.Codegen.Imperative,
        Language.K3.Codegen,
        Language.K3.TypeSystem.Monad.Iface.FreshOpaque,
        Language.K3.TypeSystem.Simplification,
        Language.K3.TypeSystem.Simplification.Common,
        Language.K3.TypeSystem.Simplification.EquivalenceUnification,
        Language.K3.TypeSystem.Within,
        Language.K3.TypeSystem.Data.Types,
        Language.K3.TypeSystem.Simplification.GarbageCollection,
        Language.K3.TypeSystem.Manifestation,
        Language.K3.TypeSystem.Manifestation.Monad,
        Language.K3.TypeSystem.Manifestation.Data,
        Language.K3.TypeSystem.Data.PrimitiveSubtyping,
        Language.K3.Utils.IndexedSet.TemplateHaskell,
        Language.K3.Utils.IndexedSet.Common,
        Language.K3.Utils.IndexedSet.Class,
        Language.K3.TypeSystem.Data.Environments,
        Language.K3.TypeSystem.Data.Environments.Common,
        Language.K3.TypeSystem.Data.Environments.Type,
        Language.K3.TypeSystem.Data.Constraints,
        Language.K3.TypeSystem.Data.ConstraintSet.Queries

    ghc-options: -Wall
    other-modules: 
                   Language.K3.Utils.Pretty.Common,
                   Language.K3.TypeSystem.Manifestation.BranchSemiElimination,
                   Language.K3.TypeSystem.Simplification.EquivalenceUnification.StructuralEquivalence,
                   Language.K3.TypeSystem.Simplification.EquivalenceUnification.Common,
                   Language.K3.TypeSystem.Simplification.EquivalenceUnification.BoundEquivalence,
                   Language.K3.TypeSystem.Simplification.EquivalenceUnification.ConstraintEquivalence

test-suite all
    type: exitcode-stdio-1.0

    main-is: Test.hs

    hs-source-dirs:
        test

    build-depends:
        base,

        K3-Core,

        bytestring,
        containers,
        directory,
        filepath,
        hslogger,
        network-transport,
        parsec,
        transformers,
        unordered-containers,

        HUnit,
        test-framework,
        test-framework-hunit

    cpp-options: -DTEST
