name:           K3-Driver
version:        0.0.0.1
author:         P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
maintainer:     P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
build-type:     Simple
cabal-version:  >=1.8

executable k3
    hs-source-dirs:
        src

    main-is: Driver.hs

    ghc-options: -Wall

    build-depends:
        base,
        filepath,
        mtl,
        optparse-applicative,
        readline,
        split,

        K3-Core
