name:           K3-Driver
version:        0.0.0.1
author:         P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
maintainer:     P.C. Shyamshankar <shyam@cs.jhu.edu>, Yanif Ahmad <yanif@cs.jhu.edu>
build-type:     Simple
cabal-version:  >=1.8

executable k3
    hs-source-dirs:
        src

    main-is: Driver.hs

    ghc-options: -Wall -O2

    build-depends:
        base,
        Cabal,
        containers,
        criterion,
        directory,
        filepath,
        haskeline,
        hslogger,
        mtl,
        optparse-applicative,
        readline,
        shake,
        split,
        text,
        transformers,
        ansi-wl-pprint,

        K3-Core
