name:           K3
version:        0.0.0.1
license:        Apache 2.0
license-file:   LICENSE
author:         The K3 Team <k3-developers@googlegroups.com>
maintainer:     The K3 Team <k3-developers@googlegroups.com>
build-type:     Simple
cabal-version:  >=1.8

flag test
    default: False
    manual: True

executable k3
    if flag(test)
        cpp-options: -DTEST

    hs-source-dirs:
        src

    main-is: Language/K3/Driver.hs

    ghc-options: -Wall -fno-warn-orphans -O2

    build-depends:
        ansi-wl-pprint,
        attoparsec,
        base,
        bytestring,
        Cabal,
        clock,
        containers,
        criterion,
        data-ordlist,
        deepseq,
        deepseq-generics,
        directory,
        either,
        errors,
        filemanip,
        filepath,
        graph-wrapper,
        hashable,
        hashable-extras,
        hashtables,
        haskeline,
        haskell-src-exts,
        haskell-src-exts-qq,
        hint,
        hslogger,
        hssqlppp,
        ieee754 == 0.7.4,
        mtl,
        network,
        network-transport,
        network-transport-tcp,
        old-locale,
        optparse-applicative,
        parsec,
        parsers,
        process,
        random,
        readline,
        safe,
        shake,
        split,
        SafeSemaphore,
        template-haskell,
        text,
        time,
        transformers,
        unordered-containers

    other-modules:
        Language.K3.Core.Annotation,
        Language.K3.Core.Annotation.Analysis,
        Language.K3.Core.Annotation.Codegen,
        Language.K3.Core.Annotation.Syntax,
        Language.K3.Core.Common,
        Language.K3.Core.Declaration,
        Language.K3.Core.Expression,
        Language.K3.Core.Literal,
        Language.K3.Core.Type,
        Language.K3.Core.Metaprogram,
        Language.K3.Core.Utils,
        Language.K3.Core.Constructor.Declaration,
        Language.K3.Core.Constructor.Expression,
        Language.K3.Core.Constructor.Literal,
        Language.K3.Core.Constructor.Type,
        Language.K3.Utils.Conditional,
        Language.K3.Utils.Either,
        Language.K3.Utils.Logger,
        Language.K3.Utils.Logger.Config,
        Language.K3.Utils.Logger.Generators,
        Language.K3.Utils.Logger.Operations,
        Language.K3.Utils.Pretty,
        Language.K3.Utils.PrettyText,
        Language.K3.Utils.Pretty.Common,
        Language.K3.Utils.Pretty.Syntax,
        Language.K3.Utils.TemplateHaskell.Reduce,
        Language.K3.Utils.TemplateHaskell.ReduceM,
        Language.K3.Utils.TemplateHaskell.Transform,
        Language.K3.Utils.TemplateHaskell.TransformM,
        Language.K3.Utils.TemplateHaskell.Utils,
        Language.K3.Parser.DataTypes,
        Language.K3.Parser.Operator,
        Language.K3.Parser.Preprocessor,
        Language.K3.Parser.ProgramBuilder,
        Language.K3.Parser,
        Language.K3.Metaprogram.DataTypes,
        Language.K3.Metaprogram.Evaluation,
        Language.K3.Metaprogram.MetaHK3,
        Language.K3.Metaprogram.Primitives.Values,
        Language.K3.Metaprogram.Primitives.Distributed,
        Language.K3.Interpreter.Data.Types,
        Language.K3.Interpreter.Data.Instances,
        Language.K3.Interpreter.Data.Accessors,
        Language.K3.Interpreter.Values,
        Language.K3.Interpreter.Utils,
        Language.K3.Interpreter.Dataspace,
        Language.K3.Interpreter.Collection,
        Language.K3.Interpreter.Builtins,
        Language.K3.Interpreter.Evaluation,
        Language.K3.Interpreter.Context,
        Language.K3.Interpreter,
        Language.K3.Runtime.Common,
        Language.K3.Runtime.Dataspace,
        Language.K3.Runtime.FileDataspace,
        Language.K3.Runtime.Dispatch,
        Language.K3.Runtime.Engine,
        Language.K3.Runtime.Literal,
        Language.K3.Runtime.Options,
        Language.K3.Transform.Alpha,
        Language.K3.Transform.Common,
        Language.K3.Transform.Hints,
        Language.K3.Transform.Normalization,
        Language.K3.Transform.Profiling,
        Language.K3.Transform.RemoveROBinds,
        Language.K3.Transform.Simplification,
        Language.K3.Transform.TriggerSymbols,
        Language.K3.Analysis.CArgs,
        Language.K3.Analysis.HMTypes.DataTypes,
        Language.K3.Analysis.HMTypes.Inference,
        Language.K3.Analysis.Properties,
        Language.K3.Analysis.Interpreter.BindAlias,
        Language.K3.Analysis.AnnotationGraph,
        Language.K3.Analysis.Provenance.Core,
        Language.K3.Analysis.Provenance.Constructors,
        Language.K3.Analysis.Provenance.Inference,
        Language.K3.Analysis.SEffects.Core,
        Language.K3.Analysis.SEffects.Constructors,
        Language.K3.Analysis.SEffects.Inference,
        Language.K3.TypeSystem.Consistency,
        Language.K3.TypeSystem.Data,
        Language.K3.TypeSystem.Monad.Iface.FreshVar,
        Language.K3.TypeSystem.Morphisms.ExtractVariables,
        Language.K3.TypeSystem.Morphisms.ReplaceVariables,
        Language.K3.TypeSystem.Polymorphism,
        Language.K3.TypeSystem,
        Language.K3.TypeSystem.Environment,
        Language.K3.TypeSystem.Annotations,
        Language.K3.TypeSystem.Utils,
        Language.K3.TypeSystem.TypeChecking,
        Language.K3.TypeSystem.Closure,
        Language.K3.TypeSystem.TypeChecking.Expressions,
        Language.K3.TypeSystem.TypeChecking.Declarations,
        Language.K3.TypeSystem.TypeChecking.TypeExpressions,
        Language.K3.TypeSystem.Data.Coproduct,
        Language.K3.TypeSystem.Data.Convenience,
        Language.K3.TypeSystem.Data.ConstraintSet,
        Language.K3.TypeSystem.TypeDecision,
        Language.K3.TypeSystem.ConstraintSetLike,
        Language.K3.TypeSystem.TypeDecision.SkeletalEnvironment,
        Language.K3.TypeSystem.TypeDecision.Data,
        Language.K3.TypeSystem.TypeDecision.Monad,
        Language.K3.TypeSystem.Utils.TemplateHaskell,
        Language.K3.TypeSystem.TypeChecking.Monad,
        Language.K3.TypeSystem.Monad.Iface.TypeError,
        Language.K3.TypeSystem.Monad.Iface.TypeAttribution,
        Language.K3.TypeSystem.Error,
        Language.K3.TypeSystem.Utils.K3Tree,
        Language.K3.TypeSystem.Monad.Utils,
        Language.K3.TypeSystem.Sanity,
        Language.K3.TypeSystem.TypeDecision.AnnotationInlining,
        Language.K3.TypeSystem.TypeDecision.StubReplacement,
        Language.K3.TypeSystem.Annotations.Error,
        Language.K3.TypeSystem.Monad.Iface.FreshOpaque,
        Language.K3.TypeSystem.Simplification,
        Language.K3.TypeSystem.Simplification.Common,
        Language.K3.TypeSystem.Simplification.EquivalenceUnification,
        Language.K3.TypeSystem.Within,
        Language.K3.TypeSystem.Data.Types,
        Language.K3.TypeSystem.Simplification.GarbageCollection,
        Language.K3.TypeSystem.Simplification.EquivalenceUnification.StructuralEquivalence,
        Language.K3.TypeSystem.Simplification.EquivalenceUnification.Common,
        Language.K3.TypeSystem.Simplification.EquivalenceUnification.BoundEquivalence,
        Language.K3.TypeSystem.Simplification.EquivalenceUnification.ConstraintEquivalence
        Language.K3.TypeSystem.Manifestation,
        Language.K3.TypeSystem.Manifestation.Graph,
        Language.K3.TypeSystem.Manifestation.Monad,
        Language.K3.TypeSystem.Manifestation.Data,
        Language.K3.TypeSystem.Manifestation.BranchSemiElimination,
        Language.K3.TypeSystem.Data.PrimitiveSubtyping,
        Language.K3.Utils.IndexedSet.TemplateHaskell,
        Language.K3.Utils.IndexedSet.Common,
        Language.K3.Utils.IndexedSet.Class,
        Language.K3.TypeSystem.Data.Environments,
        Language.K3.TypeSystem.Data.Environments.Common,
        Language.K3.TypeSystem.Data.Environments.Type,
        Language.K3.TypeSystem.Data.Constraints,
        Language.K3.TypeSystem.Data.ConstraintSet.Queries,
        Language.K3.TypeSystem.Data.Result,
        Language.K3.Codegen,
        Language.K3.Codegen.Common,
        Language.K3.Codegen.CPP,
        Language.K3.Codegen.Imperative,
        Language.K3.Codegen.CPP.Representation,
        Language.K3.Codegen.CPP.Collections,
        Language.K3.Codegen.CPP.Common,
        Language.K3.Codegen.CPP.Declaration,
        Language.K3.Codegen.CPP.Expression,
        Language.K3.Codegen.CPP.Materialization,
        Language.K3.Codegen.CPP.Materialization.Hints,
        Language.K3.Codegen.CPP.MultiIndex,
        Language.K3.Codegen.CPP.Preprocessing,
        Language.K3.Codegen.CPP.Primitives,
        Language.K3.Codegen.CPP.Program,
        Language.K3.Codegen.CPP.Simplification,
        Language.K3.Codegen.CPP.Types,
        Language.K3.Codegen.KTrace.KTraceDB,
        Language.K3.Stages,
        Language.K3.Driver.Batch.hs,
        Language.K3.Driver.Common.hs,
        Language.K3.Driver.Console.hs,
        Language.K3.Driver.Interactive.hs,
        Language.K3.Driver.Options.hs,
        Language.K3.Driver.Typecheck.hs,
        Language.K3.Driver.CompilerTarget.CPP.hs


test-suite all
    type: exitcode-stdio-1.0

    main-is: Test.hs

    hs-source-dirs:
        test

    build-depends:
        base,
        bytestring,
        containers,
        directory,
        either,
        filepath,
        hslogger,
        HUnit,
        network-transport,
        parsec,
        transformers,
        unordered-containers,
        test-framework,
        test-framework-hunit

    cpp-options: -DTEST
