name:           K3
version:        0.0.0.1
license:        Apache-2.0
license-file:   LICENSE
author:         The K3 Team <k3-developers@googlegroups.com>
maintainer:     The K3 Team <k3-developers@googlegroups.com>
build-type:     Simple
cabal-version:  >=1.8

flag test
    default: False
    manual: True

executable k3
    if flag(test)
        cpp-options: -DTEST

    hs-source-dirs:
        src

    main-is: Language/K3/Driver/Main.hs

    other-extensions: TemplateHaskell

    ghc-options: -Wall -fno-warn-orphans -O2 -threaded

    extensions:
      FlexibleContexts,
      FlexibleInstances,
      NoMonoLocalBinds,
      RankNTypes,
      TypeFamilies

    build-depends:
        ansi-wl-pprint,
        async,
        attoparsec,
        base,
        binary,
        bits,
        bytestring,
        Cabal,
        cereal,
        cereal-vector,
        clock,
        containers,
        criterion >= 1.0.2.0,
        data-ordlist,
        deepseq,
        deepseq-generics,
        directory,
        either,
        exceptions,
        filemanip,
        filepath,
        hashable,
        hashable-extras,
        hashtables,
        haskeline,
        haskell-src-exts,
        haskell-src-exts-qq,
        heaps,
        hint,
        hslogger,
        hssqlppp,
        ieee754 == 0.7.4,
        mtl,
        network,
        network-transport,
        network-transport-tcp,
        old-locale,
        optparse-applicative,
        parsec,
        parsers,
        process,
        random,
        safe,
        shake,
        split,
        SafeSemaphore,
        template-haskell,
        text,
        time,
        transformers,
        unordered-containers,
        vector,
        vector-binary-instances,
        zeromq4-haskell

test-suite all
    type: exitcode-stdio-1.0

    main-is: Test.hs

    hs-source-dirs:
        test

    build-depends:
        base,
        bytestring,
        containers,
        directory,
        either,
        filepath,
        hslogger,
        HUnit,
        network-transport,
        parsec,
        transformers,
        unordered-containers,
        test-framework,
        test-framework-hunit

    cpp-options: -DTEST
